Add committee members and do some other changes

--- a/about.html
+++ b/about.html
@@ -184,8 +184,7 @@
                 <h2 class="title title-style">Our Executive Board <img class="img-shape"
                     src="assets/img/shape/3.png" alt="Image-Givest"></h2>
                 <div class="desc">
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry's standard dummy text
-                    ever since and unknown printer took scrambled it make specimen book.</p>
+                  <p>Executive Committee and Director Board of Leo Club of Moratuwa-Ratmalana for Leostic year 2021/2022  .</p>
                   <a href="volunteer.html" class="btn-theme btn-gradient btn-slide">Join Now <img class="icon icon-img"
                       src="assets/img/icons/arrow-line-right2.png" alt="Icon"></a>
                 </div>
@@ -222,11 +221,12 @@
                       </div>
                       <div class="content">
                         <div class="member-info">
-                          <h4 class="name"><a href="#/">Leo Kasun Gunathilake</a></h4>
-                          <h6 class="designation">Secretary</h6>
+                          <h4 class="name"><a href="#/">Leo Tharindu Perera</a></h4>
+                          <h6 class="designation">Immediate Past President</h6>
                         </div>
                       </div>
                     </div>
+                    
                     <div class="swiper-slide team-member">
                       <div class="thumb">
                         <img src="assets/img/team/3.jpg" alt="Image">
@@ -254,8 +254,8 @@
                       </div>
                       <div class="content">
                         <div class="member-info">
-                          <h4 class="name"><a href="#/">Leo Dulara Vithana</a></h4>
-                          <h6 class="designation">Assistant Secretary</h6>
+                          <h4 class="name"><a href="#/">Leo Kasun Gunathilake</a></h4>
+                          <h6 class="designation">Secretary</h6>
                         </div>
                       </div>
                     </div>
@@ -270,8 +270,136 @@
                       </div>
                       <div class="content">
                         <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Dulara Vithana</a></h4>
+                          <h6 class="designation">Assistant Secretary</h6>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/6.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
                           <h4 class="name"><a href="#/">Leo Buddhi Prameel</a></h4>
                           <h6 class="designation">Treasurer</h6>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/7.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Sachintha Aberathna</a></h4>
+                          <h6 class="designation">Assistant Treasurer</h6>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/8.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Chanuri Jayamanne</a></h4>
+                          <h6 class="designation">Director</h6>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/9.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Lakindu Sanjana</a></h4>
+                          <h6 class="designation">Director</h6>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/10.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Anjana Fernando</a></h4>
+                          <h6 class="designation">Director</h6>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/11.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Ayesh Buddhima</a></h4>
+                          <h6 class="designation">Director</h6>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/12.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Charith Mihiranga</a></h4>
+                          <h6 class="designation">Director</h6>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/13.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Himansa Samarakoon</a></h4>
+                          <h6 class="designation">Director</h6>
                         </div>
                       </div>
                     </div>
