--- a/blog-details.html
+++ b/blog-details.html
@@ -283,12 +283,12 @@
                     <div class="widget-category">
                       <a href="causes-details.html">Clean Water <span>(18)</span></a>
                       <a href="causes-details.html">Children Education <span>(06)</span></a>
-                      <a href="causes-details.html">Healty Food <span>(19)</span></a>
+                      <a href="causes-details.html">Healthy Food <span>(19)</span></a>
                       <a href="causes-details.html">Food And Water <span>(27)</span></a>
                       <a href="causes-details.html">National Charity <span>(27)</span></a>
                     </div>
                   </div>
-                  <div class="widget">
+                  <!-- <div class="widget">
                     <h3 class="widget-title">Urgent Causes</h3>
                     <div class="separator-line">
                       <img class="me-1" src="assets/img/shape/line-t2.png" alt="Image-Givest">
@@ -309,7 +309,6 @@
                             <span class="amount">$ 2,000</span>
                           </li>
                         </ul>
-                        <!-- Start Progress Item -->
                         <div class="progress-item">
                           <div class="progress-line">
                             <div class="progress-bar-line" data-percent="75%"><span class="percent"></span></div>
@@ -331,7 +330,7 @@
                         </form>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                   <div class="widget mb-0 pb-3">
                     <h3 class="widget-title">Popular Tags</h3>
                     <div class="separator-line">
@@ -554,7 +553,7 @@
     var queries = queryString.split("&");
     var query = queries[0].split("=")
     console.log(query[1]);
-    var token = "EAAKix4m9HeQBAIyrE05eq2EzLMBMZA4QeHgudUjP0ZAk5E7qz1xOZC8NkXpJ3w4wzWRh2geBcQaeQTITP0OI8dd8gJV2L8G0PIrZCXLkYlVncHSEMcl5mdgZAMC8IfQVMS5rsexlHcrL8FxbSf8MF2AejRObw6DXuPMp9iQjazwZDZD";
+    var token = "EAAKix4m9HeQBAOLToYfMbB5w643aw5l88ngGilkFvQFVB9SIyBnbusaKJquVDZCjQG2w3V29FAPmrW4YeU0eJuBSvsuVngyxHfYOxNTznjEZBaQZAKt4PoJT0zwhGtuaZBZCuYttaJzyZC6szvVvFJuVOSvWCVl1VFO39WEqzorwZDZD";
     window.fbAsyncInit = function () {
       console.log('intiii');
 
