--- a/committee.html
+++ b/committee.html
@@ -127,12 +127,254 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="team-member-items">
+                <div class="row">
+                  <div class="col-sm-6 col-md-3 col-md-3 col-lg-3">
+                    <div class="team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/1.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Baratha Aberathna</a></h4>
+                          <h6 class="designation">President</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-3 col-lg-3">
+                    <div class="team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/2.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Tharindu Perera</a></h4>
+                          <h6 class="designation">Immediate Past President</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-3 col-lg-3">
+                    <div class="team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/3.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Dinuvi Fonseka</a></h4>
+                          <h6 class="designation">Vice President</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-3 col-lg-3">
+                    <div class="team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/4.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Kasun Gunathilake</a></h4>
+                          <h6 class="designation">Secretary</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-3 col-lg-3">
+                    <div class="team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/5.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Dulara Vithana</a></h4>
+                          <h6 class="designation">Assistant Secretary</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-3 col-lg-3">
+                    <div class="team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/6.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Buddhi Prameel</a></h4>
+                          <h6 class="designation">Treasurer</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-3 col-lg-3">
+                    <div class="team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/7.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Sachintha Aberathna</a></h4>
+                          <h6 class="designation">Assistant Treasurer</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-3 col-lg-3">
+                    <div class="team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/8.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Chanuri Jayamanne</a></h4>
+                          <h6 class="designation">Director</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-3 col-lg-3">
+                    <div class="team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/9.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Lakindu Sanjana</a></h4>
+                          <h6 class="designation">Director</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-3 col-lg-3">
+                    <div class="team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/10.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Anjana Fernando</a></h4>
+                          <h6 class="designation">Director</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-3 col-lg-3">
+                    <div class="team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/11.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Ayesh Buddhima</a></h4>
+                          <h6 class="designation">Director</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-3 col-lg-3">
+                    <div class="team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/12.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Charith Mihiranga</a></h4>
+                          <h6 class="designation">Director</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-3 col-lg-3">
+                    <div class="team-member">
+                      <div class="thumb">
+                        <img src="assets/img/team/13.jpg" alt="Image">
+                        <div class="social-icons">
+                          <a href="#"><i class="icofont-facebook"></i></a>
+                          <a href="#"><i class="icofont-skype"></i></a>
+                          <a href="#"><i class="icofont-twitter"></i></a>
+                        </div>
+                      </div>
+                      <div class="content">
+                        <div class="member-info">
+                          <h4 class="name"><a href="#/">Leo Himansa Samarakoon</a></h4>
+                          <h6 class="designation">Director</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="row">
+            <div class="col-lg-12">
+              <div class="team-member-items">
                 <div class="row" id="club_committee_list">
                   
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
       <!--== End Team Area ==-->
@@ -141,7 +383,7 @@
     <section class="funfact-area funfact-default-area">
       <div class="container">
         <div class="row row-gutter-0 funfact-items-style1" data-aos="fade-up" data-aos-duration="1000">
-          <div class="col-sm-6 col-md-4 funfact-item">
+          <div class="col-sm-6 col-md-3 col-md-4 funfact-item">
             <div class="inner-content">
               <div class="icon-box">
                 <img class="icon" src="assets/img/icons/f1.png" alt="Image-Givest">
@@ -156,7 +398,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 funfact-item">
+          <div class="col-sm-6 col-md-3 col-md-4 funfact-item">
             <div class="inner-content">
               <div class="icon-box">
                 <img class="icon" src="assets/img/icons/f2.png" alt="Image-Givest">
@@ -171,7 +413,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 funfact-item">
+          <div class="col-sm-6 col-md-3 col-md-4 funfact-item">
             <div class="inner-content">
               <div class="icon-box">
                 <img class="icon" src="assets/img/icons/f3.png" alt="Image-Givest">
@@ -195,7 +437,7 @@
       <section class="brand-logo-area brand-logo-default-area">
         <div class="container">
           <!-- <div class="row">
-            <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-4 offset-lg-0 col-xl-4">
+            <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-3 offset-lg-0 col-xl-4">
               <div class="section-title text-center text-lg-start">
                 <h2 class="title title-style mt-xl-30">Our Current Sponsors. <img class="img-shape"
                     src="assets/img/shape/3.png" alt="Image-Givest"></h2>
@@ -268,7 +510,7 @@
       <div class="footer-main">
         <div class="container">
           <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
+            <div class="col-sm-12 col-md-6 col-lg-3 col-xl-4">
               <div class="widget-item">
                 <div class="about-widget">
                   <a class="footer-logo" href="index.html">
@@ -284,7 +526,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
+            <div class="col-sm-6 col-md-3 col-md-6 col-lg-3 col-xl-4">
               <div class="widget-item">
                 <h4 class="widget-title line-style">Social Media</h4>
                 <div class="widget-gallery">
@@ -324,12 +566,12 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
+            <div class="col-sm-6 col-md-3 col-md-6 col-lg-3 col-xl-4">
               <div class="widget-item menu-wrap-two-column">
                 <h4 class="widget-title line-style">Quick Links</h4>
                 <nav class="widget-menu-wrap">
                   <div class="row">
-                    <div class="col-6 col-sm-6 col-md-6 pr-sm-5">
+                    <div class="col-6 col-sm-6 col-md-3 col-md-6 pr-sm-5">
                       <ul class="nav-menu nav">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
@@ -339,7 +581,7 @@
                         <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </div>
-                    <!-- <div class="col-6 col-sm-6 col-md-6 pl-sm-5">
+                    <!-- <div class="col-6 col-sm-6 col-md-3 col-md-6 pl-sm-5">
                           <ul class="nav-menu nav align-right">
                             <li><a href="volunteer.html">Become Volunteer</a></li>
                             <li><a href="#/">Quick Fundraise</a></li>
@@ -465,7 +707,7 @@
         var html = '';
         clubList.forEach(function (item) {
         console.log(item.leo_name + item.leo_club_officer_level+" "+ item.leo_designation_if_club_director);
-        // html += '<div class="col-sm-6 col-lg-4">';
+        // html += '<div class="col-sm-6 col-md-3 col-lg-3">';
         // html += '  <div class="team-member">';
         // html += '  <div class="thumb">';
         // html +='  <img src="'+item.leo_image+'" alt="Image">';
@@ -486,7 +728,7 @@
 
         if (item.leo_is_club_officer === "1" || item.leo_designation_if_club_director!=null ) {
             // console.log(item.leo_name + item.leo_club_officer_level + item.leo_image);
-          html += '<div class="col-sm-6 col-lg-4">';
+          html += '<div class="col-sm-6 col-md-3 col-lg-3">';
           html += '  <div class="team-member">';
           html += '  <div class="thumb">';
           html += '  <img src="' + item.leo_image + '" alt="Image">';
@@ -553,7 +795,7 @@
 
         //     if (item.leo_is_club_officer === "2" && item.leo_club_officer_level === '0') {
         //         document.getElementById('directors-list').innerHTML = document.getElementById('directors-list').innerHTML +
-        //             '<div class="team-block col-lg-4 col-md-6 col-sm-12">\n' +
+        //             '<div class="team-block col-lg-3 col-md-6 col-sm-12">\n' +
         //             '                    <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">\n' +
         //             '                        <ul class="social-icons">\n' +
         //             '                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>\n' +
