--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
       <!--== End About Area ==-->
 
       <!--== Start Project Area ==-->
-      <section class="causes-area causes-default-area">
+      <!-- <section class="causes-area causes-default-area">
         <div class="container">
           <div class="row">
             <div class="col-lg-8 m-auto">
@@ -332,8 +332,27 @@
 
 
         </div>
-      </section>
+      </section> -->
       <!--== End Project Area ==-->
+
+            <!--== Start Causes Area ==-->
+            <section class="causes-area causes-default-area">
+              <div class="container">
+                <div class="row">
+                  <div class="col-lg-8 m-auto">
+                    <div class="section-title text-center" data-aos="fade-up" data-aos-duration="1000">
+                      <h5 class="subtitle line-theme-color">Our Journey</h5>
+                      <h2 class="title title-style">Our experience can change your life <img class="img-shape"
+                          src="assets/img/shape/3.png" alt="Image-Givest"></h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="row" data-aos="fade-up" data-aos-duration="1000" id="blog_post_list">
+            
+                </div>
+              </div>
+            </section>
+            <!--== End Causes Area ==-->
 
       <!--== Start Testimonial Area ==-->
       <section class="testimonial-area testimonial-default-area bgcolor-theme3">
