--- a/about.html
+++ b/about.html
@@ -345,81 +345,10 @@
             <h2 class="title text-white"><span>Gallery</span> </h2>
             <h2 class="title text-white">A story of our own.</h2>
           </div>
-          <div class="row">
+          <div class="row" id="gallery_list">
 
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-              <a href="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
-                class="fancybox" rel="ligthbox">
-                <img
-                  src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
-                  class="zoom img-fluid " alt="">
-
-              </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-              <a href="https://images.pexels.com/photos/38238/maldives-ile-beach-sun-38238.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
-                class="fancybox" rel="ligthbox">
-                <img
-                  src="https://images.pexels.com/photos/38238/maldives-ile-beach-sun-38238.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
-                  class="zoom img-fluid" alt="">
-              </a>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-              <a href="https://images.pexels.com/photos/158827/field-corn-air-frisch-158827.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                class="fancybox" rel="ligthbox">
-                <img
-                  src="https://images.pexels.com/photos/158827/field-corn-air-frisch-158827.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                  class="zoom img-fluid " alt="">
-              </a>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-              <a href="https://images.pexels.com/photos/302804/pexels-photo-302804.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                class="fancybox" rel="ligthbox">
-                <img
-                  src="https://images.pexels.com/photos/302804/pexels-photo-302804.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                  class="zoom img-fluid " alt="">
-              </a>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-              <a href="https://images.pexels.com/photos/1038914/pexels-photo-1038914.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
-                class="fancybox" rel="ligthbox">
-                <img
-                  src="https://images.pexels.com/photos/1038914/pexels-photo-1038914.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
-                  class="zoom img-fluid " alt="">
-              </a>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-              <a href="https://images.pexels.com/photos/414645/pexels-photo-414645.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
-                class="fancybox" rel="ligthbox">
-                <img
-                  src="https://images.pexels.com/photos/414645/pexels-photo-414645.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
-                  class="zoom img-fluid " alt="">
-              </a>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-              <a href="https://images.pexels.com/photos/56005/fiji-beach-sand-palm-trees-56005.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                class="fancybox" rel="ligthbox">
-                <img
-                  src="https://images.pexels.com/photos/56005/fiji-beach-sand-palm-trees-56005.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                  class="zoom img-fluid " alt="">
-              </a>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-              <a href="https://images.pexels.com/photos/1038002/pexels-photo-1038002.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                class="fancybox" rel="ligthbox">
-                <img
-                  src="https://images.pexels.com/photos/1038002/pexels-photo-1038002.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                  class="zoom img-fluid " alt="">
-              </a>
-            </div>
-
+            
 
 
 
@@ -689,7 +618,8 @@
 
   <!--=== Custom Js ===-->
   <script src="assets/js/custom.js"></script>
-  <script src="assets/js/gallery.js"></script>
+  <script src="assets/js/fb-gallery.js"></script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 
 </body>
 
