Baratha : Committee changed to officers , Slider transition time added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   <li><a href="about.html">About Us</a></li>
                   <li><a href="projects.html">Projects</a></li>
                   <!-- <li><a href="event-details.html">Events</a></li> -->
-                  <li><a href="committee.html">Committee</a>
+                  <li><a href="committee.html">Officers</a>
                   <li><a href="contact.html">Contact Us</a></li>
                 </ul>
               </div>
@@ -336,23 +336,22 @@
       <!--== End Project Area ==-->
 
             <!--== Start Causes Area ==-->
-            <section class="causes-area causes-default-area">
-              <div class="container">
-                <div class="row">
-                  <div class="col-lg-8 m-auto">
-                    <div class="section-title text-center" data-aos="fade-up" data-aos-duration="1000">
-                      <h5 class="subtitle line-theme-color">Our Journey</h5>
-                      <h2 class="title title-style">Our experience can change your life <img class="img-shape"
-                          src="assets/img/shape/3.png" alt="Image-Givest"></h2>
-                    </div>
-                  </div>
-                </div>
-                <div class="row" data-aos="fade-up" data-aos-duration="1000" id="blog_post_list">
-            
-                </div>
+      <section class="causes-area causes-default-area">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 m-auto">
+              <div class="section-title text-center" data-aos="fade-up" data-aos-duration="1000">
+                <h5 class="subtitle line-theme-color">Our Journey</h5>
+                <h2 class="title title-style">Our experience can change your life <img class="img-shape"
+                    src="assets/img/shape/3.png" alt="Image-Givest"></h2>
               </div>
-            </section>
-            <!--== End Causes Area ==-->
+            </div>
+          </div>
+          <div class="row" data-aos="fade-up" data-aos-duration="1000" id="blog_post_list">
+          </div>
+        </div>
+      </section>
+      <!--== End Causes Area ==-->
 
       <!--== Start Testimonial Area ==-->
       <section class="testimonial-area testimonial-default-area bgcolor-theme3">
@@ -698,7 +697,7 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <!-- <li><a href="event-details.html">Events</a></li> -->
-                        <li><a href="committee.html">Committee</a></li>
+                        <li><a href="committee.html">Officers</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </div>
