--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
               <li class="active"><a href="about.html">About Us</a></li>
               <li><a href="projects.html">Projects</a></li>
               <!-- <li><a href="event-details.html">Events</a></li> -->
-              <li><a href="committee.html">Committee</a>
+              <li><a href="committee.html">Officers</a>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
@@ -634,7 +634,7 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <!-- <li><a href="event-details.html">Events</a></li> -->
-                        <li><a href="committee.html">Committee</a></li>
+                        <li><a href="committee.html">Officers</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </div>
