--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                   <li><a href="about.html">About Us</a></li>
                   <li><a href="projects.html">Projects</a></li>
                   <!-- <li><a href="committee.html">Committee</a>               -->
-                  <li><a href="committee.html">Committee</a>
+                  <li><a href="committee.html">Officers</a>
                   <li class="active"><a href="contact.html">Contact Us</a></li>
                 </ul>
               </div>
@@ -284,7 +284,7 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <!-- <li><a href="event-details.html">Events</a></li> -->
-                        <li><a href="committee.html">Committee</a></li>
+                        <li><a href="committee.html">Officers</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </div>
