--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
                   <li ><a href="about.html">About Us</a></li>
                   <li class="active"><a href="projects.html">Projects</a></li>
                   <!-- <li><a href="event-details.html">Events</a></li> -->
-                  <li><a href="committee.html">Committee</a>
+                  <li><a href="committee.html">Officers</a>
                   <li><a href="contact.html">Contact Us</a></li>
                 </ul>
               </div>
@@ -124,7 +124,6 @@
             </div>
           </div>
           <div class="row" data-aos="fade-up" data-aos-duration="1000" id="blog_post_list">
-      
           </div>
         </div>
       </section>
@@ -627,7 +626,7 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <!-- <li><a href="event-details.html">Events</a></li> -->
-                        <li><a href="committee.html">Committee</a></li>
+                        <li><a href="committee.html">Officers</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </div>
